Done with static pages

--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -6,4 +6,7 @@ cursor_positions:
   - :path: public/index.html
     :cursor_offset: 5811
     :timestamp: 2012-06-07 10:06:16 +08:00
+  - :path: app/views/layouts/application.html.erb
+    :cursor_offset: 0
+    :timestamp: 2012-06-07 10:06:16 +08:00
 files_to_retain: 0
