Completed the layout structure

--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -57,4 +57,10 @@ cursor_positions:
   - :path: app/helpers/pages_helper.rb
     :cursor_offset: 0
     :timestamp: 2012-06-18 10:40:43 +08:00
+  - :path: user.rb
+    :cursor_offset: 124
+    :timestamp: 2012-06-24 15:28:23 +08:00
+  - :path: public/stylesheets/blueprint/ie.css
+    :cursor_offset: 0
+    :timestamp: 2012-06-24 09:29:23 +08:00
 files_to_retain: 0
