--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -24,9 +24,6 @@ cursor_positions:
   - :path: app/views/pages/home.html.erb
     :cursor_offset: 0
     :timestamp: 2012-06-18 10:40:43 +08:00
-  - :path: spec/controllers/pages_controller_spec.rb
-    :cursor_offset: 407
-    :timestamp: 2012-06-18 10:40:43 +08:00
   - :path: script/rails
     :cursor_offset: 0
     :timestamp: 2012-06-07 10:06:16 +08:00
@@ -48,9 +45,6 @@ cursor_positions:
   - :path: db/seeds.rb
     :cursor_offset: 0
     :timestamp: 2012-06-07 10:06:16 +08:00
-  - :path: app/views/layouts/application.html.erb
-    :cursor_offset: 210
-    :timestamp: 2012-06-24 09:35:14 +08:00
   - :path: app/helpers/application_helper.rb
     :cursor_offset: 226
     :timestamp: 2012-06-18 10:40:43 +08:00
@@ -63,4 +57,13 @@ cursor_positions:
   - :path: public/stylesheets/blueprint/ie.css
     :cursor_offset: 0
     :timestamp: 2012-06-24 09:29:23 +08:00
+  - :path: public/images/logo.png
+    :cursor_offset: 0
+    :timestamp: 2012-06-24 18:59:56 +08:00
+  - :path: app/views/layouts/application.html.erb
+    :cursor_offset: 827
+    :timestamp: 2012-06-24 19:08:42 +08:00
+  - :path: spec/controllers/pages_controller_spec.rb
+    :cursor_offset: 87
+    :timestamp: 2012-06-24 15:52:48 +08:00
 files_to_retain: 0
