Added a User controller and layout link tests

--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -21,9 +21,6 @@ cursor_positions:
   - :path: Gemfile
     :cursor_offset: 0
     :timestamp: 2012-06-18 10:40:43 +08:00
-  - :path: spec/spec_helper.rb
-    :cursor_offset: 0
-    :timestamp: 2012-06-18 10:40:43 +08:00
   - :path: app/views/pages/contact.html.erb
     :cursor_offset: 0
     :timestamp: 2012-06-18 10:40:43 +08:00
@@ -33,9 +30,6 @@ cursor_positions:
   - :path: db/seeds.rb
     :cursor_offset: 0
     :timestamp: 2012-06-07 10:06:16 +08:00
-  - :path: app/helpers/application_helper.rb
-    :cursor_offset: 226
-    :timestamp: 2012-06-18 10:40:43 +08:00
   - :path: user.rb
     :cursor_offset: 124
     :timestamp: 2012-06-24 15:28:23 +08:00
@@ -48,9 +42,6 @@ cursor_positions:
   - :path: config/routes.rb
     :cursor_offset: 210
     :timestamp: 2012-06-25 09:40:36 +08:00
-  - :path: spec/controllers/pages_controller_spec.rb
-    :cursor_offset: 1315
-    :timestamp: 2012-06-25 09:36:12 +08:00
   - :path: spec/requests/layout_links_spec.rb
     :cursor_offset: 459
     :timestamp: 2012-06-25 09:29:09 +08:00
@@ -72,9 +63,6 @@ cursor_positions:
   - :path: app/assets/stylesheets/custom.css
     :cursor_offset: 278
     :timestamp: 2012-06-25 09:07:06 +08:00
-  - :path: app/views/pages/home.html.erb
-    :cursor_offset: 0
-    :timestamp: 2012-06-25 08:50:58 +08:00
   - :path: app/views/layouts/_stylesheets.html.erb
     :cursor_offset: 404
     :timestamp: 2012-06-25 08:56:00 +08:00
@@ -87,4 +75,30 @@ cursor_positions:
   - :path: app/helpers/pages_helper.rb
     :cursor_offset: 0
     :timestamp: 2012-06-18 10:40:43 +08:00
+  - :path: public/robots.txt
+    :cursor_offset: 0
+    :timestamp: 2012-06-07 10:06:16 +08:00
+  - :path: spec/spec_helper.rb
+    :cursor_offset: 0
+    :timestamp: 2012-06-18 10:40:43 +08:00
+  - :path: spec/controllers/pages_controller_spec.rb
+    :cursor_offset: 1315
+    :timestamp: 2012-06-25 09:36:12 +08:00
+  - :path: app/helpers/application_helper.rb
+    :cursor_offset: 302
+    :timestamp: 2012-06-25 09:54:12 +08:00
+  - :path: spec/controllers/user_controller_spec.rb
+    :cursor_offset: 176
+    :timestamp: 2012-06-25 10:09:08 +08:00
+    :selection_offset: 303
+    :block_selection_mode: false
+  - :path: app/views/pages/home.html.erb
+    :cursor_offset: 0
+    :timestamp: 2012-06-25 08:50:58 +08:00
+  - :path: app/controllers/user_controller.rb
+    :cursor_offset: 65
+    :timestamp: 2012-06-25 10:02:44 +08:00
+  - :path: app/views/layouts/_header.html.erb
+    :cursor_offset: 39
+    :timestamp: 2012-06-25 09:54:30 +08:00
 files_to_retain: 0
